enable preview directly in compiler-plugin not with args